@@ -22,6 +22,7 @@ ifneq ($(CROSSCOMPILING), 1)
 	RANLIB=$(TARGETRANLIB) \
 	CPPFLAGS=$(TARGETCPPFLAGS) \
 	CXXFLAGS=$(TARGETCXXFLAGS) \
+	LDFLAGS=$(TARGETLDFLAGS) \
 	$(ORIGDIR)/sdcc-extra/configure --host=$(TARGETOS) --build=$(HOSTOS)
 	$(MAKE) -C $(SDCCEXTRADIR)
 endif
