@@ -29,6 +29,7 @@ $(_SDCCDIR)/sdccconf.h:
 	RANLIB=$(TARGETRANLIB) \
 	CPPFLAGS=$(TARGETCPPFLAGS) \
 	CXXFLAGS=$(TARGETCXXFLAGS) \
+	LDFLAGS=$(TARGETLDFLAGS) \
 	$(ORIGDIR)/sdcc/configure $(SDCCCONFIGUREFLAGS) --host=$(TARGETOS) --build=$(HOSTOS) > $(NOISELOG)
 	@echo -- Configured sdcc for $(TARGETOS), CC=$(TARGETCC), CXX=$(TARGETCXX)
 
